# gpt_strategy_short_put

./: .gitignore  Cargo.toml  README.md  project_path.md  prompt_2.md  prompt_log_2.md  prompt_log_3.md  prompt_log_4.md  prompt_log_5.md  prompt_log_6.md  test_prompt.txt
.specstory/history/: 2025-07-06_13-55Z-overview-of-short-put-option-strategy.md  2025-07-09_12-35Z-rust-tool-development-for-short-put-strategy.md
prompt_input/: prompt_ask_ai_framework.md
prompt_output/: complete_project_prompt.md  complete_project_prompt_en.md  complete_project_prompt_en_with_sources.md  create_project.sh  final_prompt_1.md
short_put_strategy/: Cargo.toml  Dockerfile  README.md  config.toml  credentials.toml  docker_handling.sh
short_put_strategy/manuell/: docker_handling.sh  setup_project.sh
short_put_strategy/src/: analysis.rs  config.rs  credentials.rs  data.rs  main.rs  mod analysis;  strategy.rs  utils.rs
