[package]
name = "short_put_strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
ibkr = { git = "https://github.com/wvietor/ibkr_rust.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.18"
env_logger = "0.11"
log = "0.4"
csv = "1.3"